<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vnu_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="archeryang@me.com">jetson</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>time</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
